# mypackage

./: LICENSE.txt  pyproject.toml
mypackage/: __init__.py
mypackage/geometry/: __init__.py  geometry.py
