[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage"
version = "0.1.0"
description = "My first package"
license = {file = "LICENSE.txt"}
dependecies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "bumpver",
  "pytest",
  "pytest-cov",
]